batman-adv-kernelland (0.1-11) UNRELEASED; urgency=low

  * Upgraded to policy 3.8.3, no changes required
  * Add README.source with informations about patch management

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Sun, 16 Aug 2009 02:42:02 +0200

batman-adv-kernelland (0.1-10) unstable; urgency=low

  * debian/patches:
    - Add 106-netdevice_ops.patch, fix compilation against linux-2.6.31-rc1
      (Closes: #534631)
    - Add 107-linux-2.6.19.patch, 108-linux-2.6.18.patch,
      109-linux-2.6.17.patch, 110-linux-2.6.15.patch, backport to linux-2.6.15

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Fri, 07 Aug 2009 22:44:56 +0200

batman-adv-kernelland (0.1-9) unstable; urgency=low

  * debian/rules:
    - Use the kernel makefiles directly to build the module to match
      linux-modules-extra-2.6 way of building it
    - Add get-orig-source target to retrieve source
  * debian/patches:
    - 103-outoftree_kbuild.patch, remove due to different linux module build
      approach
    - Add 103-icmp-userspace-read.patch, read complete icmp packet from
      userspace
    - Add 104-endless-recv.patch, consume even ignored packets to allow kernel
      receive thread to sleep
    - Add 105-icmp-check.patch, check for correct icmp version before sending it
  * Convert debian/copyright to new dep5 version
  * Upgraded to policy 3.8.2, no changes required
  * Add debian/get-orig-source.sh to get source from svn or via uscan

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Thu, 25 Jun 2009 01:08:41 +0200

batman-adv-kernelland (0.1-8) unstable; urgency=low

  * Allow Debian Maintainers to upload new versions of batman-adv-kernelland

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Wed, 06 May 2009 13:04:37 +0200

batman-adv-kernelland (0.1-7) unstable; urgency=low

  * Install kernel module source tarball to batman-adv.tar.bz2 instead of
    batman-adv-source.tar.bz2
  * Allow out of tree module build for linux-modules-extra-2.6
