@@ -1,10 +1,6 @@
-From ad7d02effb09ba98dbaa0d1e6b334f1e959728cf Mon Sep 17 00:00:00 2001
-From: Sven Eckelmann <sven.eckelmann@gmx.de>
-Date: Thu, 25 Jun 2009 00:35:23 +0200
-Subject: [PATCH] read packet even though it will be ignore to avoid endless call loop
-
-
-Signed-off-by: Sven Eckelmann <sven.eckelmann@gmx.de>
+Description: read packet even though it will be ignore to avoid endless call loop
+Origin: backport, http://open-mesh.net/changeset/1320
+Author: Marek Lindner <lindner_marek@yahoo.de>
 ---
  routing.c |    1 +
  1 files changed, 1 insertions(+), 0 deletions(-)
