@@ -1,15 +1,12 @@
-From 130db7415c9663f90378e0ee3afc441b521ad4ac Mon Sep 17 00:00:00 2001
-From: Sven Eckelmann <sven.eckelmann@gmx.de>
-Date: Sat, 27 Jun 2009 00:42:11 +0200
-Subject: [PATCH] [batman-adv] Convert to new net_device_ops
-
-The current version of batman-adv-kernelland uses the netdevice
-structure instead of netdevice ops introduced by
-v2.6.28-rc5-510-gd314774. The compatibility version was removed in
-v2.6.30-rc6-851-ge3804cb. We need to change now change to this new
-structure to be able to compile it against linux-2.6.31.
-
-Signed-off-by: Sven Eckelmann <sven.eckelmann@gmx.de>
+Description: Convert to new net_device_ops
+ The current version of batman-adv-kernelland uses the netdevice
+ structure instead of netdevice ops introduced by
+ v2.6.28-rc5-510-gd314774. The compatibility version was removed in
+ v2.6.30-rc6-851-ge3804cb. We need to change now change to this new
+ structure to be able to compile it against linux-2.6.31.
+Bug-Debian: http://bugs.debian.org/534631
+Forwarded: https://lists.open-mesh.net/pipermail/b.a.t.m.a.n/2009-June/002711.html
+Author: Sven Eckelmann <sven.eckelmann@gmx.de>
 ---
  soft-interface.c |   17 +++++++++++++++++
  1 files changed, 17 insertions(+), 0 deletions(-)
