@@ -1,12 +1,8 @@
-From 31a70c22e05c82e2b9a861e1b8befac1c2409fa2 Mon Sep 17 00:00:00 2001
-From: Sven Eckelmann <sven.eckelmann@gmx.de>
-Date: Fri, 7 Aug 2009 21:57:56 +0200
-Subject: [PATCH] Backport to 2.6.17
-
-Linux v2.6.17-4588-ge4d9191 introduced __SPIN_LOCK_UNLOCKED to extend
-the new debugging facility.
-
-Signed-off-by: Sven Eckelmann <sven.eckelmann@gmx.de>
+Description: Backport to 2.6.17
+ Linux v2.6.17-4588-ge4d9191 introduced __SPIN_LOCK_UNLOCKED to extend
+ the new debugging facility.
+Forwarded: no
+Author: Sven Eckelmann <sven.eckelmann@gmx.de>
 ---
  compat.h |   15 +++++++++++++++
  1 files changed, 15 insertions(+), 0 deletions(-)
