@@ -2,6 +2,8 @@ batman-adv-kernelland (0.1-11) UNRELEASED; urgency=low
 
   * Upgraded to policy 3.8.3, no changes required
   * Add README.source with informations about patch management
+  * debian/patches:
+    - Change to dep3 patch tagging guidelines
 
  -- Sven Eckelmann <sven.eckelmann@gmx.de>  Sun, 16 Aug 2009 02:42:02 +0200
 
